--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico', v=now_timestamp) }}">
     
+    <!-- Chart.js para gráficos -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -38,6 +41,7 @@
             <a href="/servicios">Mis Servicios</a> 
             <a href="/horarios">Mi Horario</a> 
             <a href="/configuracion_publica">Calendario Publico</a>
+            <a href="{{ url_for('configuracion_email') }}">Configuración Email</a>
             <a href="/mensajes">Mis Mensajes</a>  
             <a href="/campanas">Campañas</a>
             <a href="/logout">Cerrar Sesión</a>
@@ -58,6 +62,7 @@
         <a href="/servicios">Mis Servicios</a> 
         <a href="/horarios">Mi Horario</a> 
         <a href="/configuracion_publica">Calendario Publico</a>
+        <a href="{{ url_for('configuracion_email') }}">Configuración Email</a>
         <a href="/mensajes">Mis Mensajes</a>  
         <a href="/campanas">Campañas</a>
         <a href="/logout">Cerrar Sesión</a>
