--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -17,8 +17,8 @@
                 <input type="text" id="apellido" name="apellido" class="form-control" value="{{ clienta.apellido }}" required>
             </div>
             <div class="form-group">
-                <label for="telefono">Teléfono:</label>
-                <input type="tel" id="telefono" name="telefono" class="form-control" value="{{ clienta.telefono or '' }}">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" class="form-control" value="{{ clienta.email or '' }}">
             </div>
             <div class="form-group">
                 <label for="cumpleanos">Cumpleaños:</label>
