cosmetica a la pagina de registro

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <div class="login-container">
+    <a href="/"><img src="{{ url_for('static', filename='logo_login.png') }}" alt="Logo" class="login-logo"></a>
     <div class="formulario-login">
         <h2>Crear Cuenta para tu Salón</h2>
 
