mensaje prefijado de wapp para registro

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -27,7 +27,7 @@
         </form>
                 <p>¿Ya tenés cuenta? <a href="{{ url_for('login') }}">Iniciá Sesión</a></p>
         <hr>
-        <p>¿Necesitás ayuda? <a href="https://wa.me/5491112345678" class="btn-whatsapp" target="_blank">Contactar al Administrador</a></p>
+        <p>¿Necesitás ayuda? <a href="https://wa.me/5491168855834?text=Hola%2C%20me%20acabo%20de%20registrar%20en%20movaro%20y%20tengo%20pendiente%20la%20activacion" class="btn-whatsapp" target="_blank">Contactar al Administrador</a></p>
     </div>
 </div>
 {% endblock %}
